--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,6 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.4.201502262128</version>
 				<configuration>
 					<dataFile>${project.build.directory}/jacoco.exec</dataFile>
 					<destFile>${project.build.directory}/jacoco.exec</destFile>
@@ -140,29 +139,32 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<!-- <version>2.19.1</version> -->
 				<configuration>
 					<argLine>${jacoco.agent.argLine}</argLine>
 					<skipTests>${skip.unit.tests}</skipTests>
 					<!-- Excludes integration tests when unit tests are run. -->
 					<excludes>
-						<exclude>com.ice.av.sample.test.integration.*</exclude>
+						<exclude>**/test/integration/**</exclude>
 						<exclude>${tests.exclude.remote}</exclude>
 					</excludes>
 					<includes>
-						<include>com.ice.av.sample.test.ut.**</include>
+						<include>**/test/ut/**</include>
 					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.19.1</version>
+				<!-- <version>2.19.1</version> -->
 				<configuration>
 					<argLine>${jacoco.agent.argLine}</argLine>
 					<includes>
-						<include>com.ice.av.sample.test.integration.*</include>
+						<include>**/integration/*</include>
 					</includes>
+					<excludes>
+						<exclude>**/test/ut/**</exclude>
+					</excludes>
 				</configuration>
 				<executions>
 					<execution>
