--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.7.9</version>
 				<configuration>
 					<dataFile>${project.build.directory}/jacoco.exec</dataFile>
 					<destFile>${project.build.directory}/jacoco.exec</destFile>
