--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
-							<finalName>${project.artifactId}-${project.version}-${maven.build.timestamp}</finalName>
+							<finalName>${project.artifactId}</finalName>
 							<descriptors>
 								<descriptor>src/main/resources/assembly.xml</descriptor>
 							</descriptors>
